Name:                cuda-npp
Version:             0.1
Synopsis:            Haskell binding to the NVIDIA Performance Primitives library.
Description:         From NVIDIA Developer Zone: "The NVIDIA Performance Primitives library (NPP) is a collection of GPU-accelerated image, video, and signal processing functions that deliver 5x to 10x faster performance than comparable CPU-only implementations. Using NPP, developers can take advantage of over 2000 (in CUDA 4.1) image processing and signal processing primitives to achieve significant improvements in application performance in a matter of hours. Whether you are simply replacing CPU primitives with GPU-accelerated versions or integrating NPP primitives with your existing GPU-accelerated pipeline, NPP delivers high performance while reducing your development time."
Homepage:            https://github.com/twadleigh/cuda-npp
License:             BSD3
License-file:        LICENSE
Author:              Tracy Wadleigh
Maintainer:          tracy.wadleigh@gmail.com
Stability:	     experimental
Copyright:           (c) 2012 Tracy Wadleigh
Category:            Foreign
Cabal-version:       >=1.6
Build-type:          Simple

Source-repository    head
  Type:		     git
  Location:	     git://github.com/twadleigh/cuda-npp.git

-- Extra-source-files:  

Library
  -- Modules exported by the library.
  Exposed-modules:     Foreign.CUDA.NPP.Raw.Types
  
  -- Packages needed in order to build this package.
  Build-depends:       cuda
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         c2hs
  